Небольшой рефакторинг
Исправил некоторые Lint-предупреждения